objects/CSS_Complaint_Data__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values_1__c</fullName>
        <label>Picklist_Values_1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values_2__c</fullName>
        <label>Picklist_Values_2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values_3__c</fullName>
        <label>Picklist_Values_3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CSS_Complaint_Data</label>
</CustomObject>